--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "changelog-sn": "^2.2.0",
+    "conventional-changelog-cli": "^2.2.2",
     "husky": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,19 +29,17 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js --ext .jsx src",
     "log": "changelog-sn -i CHANGELOG.md -s -r 2",
-    "cz": "git add . && git cz"
+    "commit": "git cz",
+    "changelog":"conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -e $GIT_PARAMS"
     }
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
-    },
-    "cz-customizable": {
-      "config": "./.czconfigrc.js"
+      "path": "node_modules/cz-customizable"
     }
   },
   "devDependencies": {
