--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react-dom": "^18.0.6",
     "changelog-sn": "^2.2.0",
     "conventional-changelog-cli": "^2.2.2",
-    "husky": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -30,17 +29,18 @@
     "lint": "eslint --ext .js --ext .jsx src",
     "log": "changelog-sn -i CHANGELOG.md -s -r 2",
     "commit": "git cz",
-    "changelog":"conventional-changelog -p angular -i CHANGELOG.md -s"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -e $GIT_PARAMS"
-    }
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-customizable"
+      "path": "./node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-configrc.js"
     }
+  },
+  "gitHooks": {
+    "commit-msg": "commitlint -e $GIT_PARAMS"
   },
   "devDependencies": {
     "changelog-sn": "2.0.5"
