feat: add commit check

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "changelog-sn": "^2.2.0",
-    "conventional-changelog-cli": "^2.2.2",
+    "commitizen": "4.2.4",
+    "conventional-changelog-cli": "2.2.2",
+    "cz-customizable": "6.3.0",
+    "husky": "7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -28,19 +31,12 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js --ext .jsx src",
     "log": "changelog-sn -i CHANGELOG.md -s -r 2",
-    "commit": "git cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "commit": "git cz"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-customizable"
-    },
-    "cz-customizable": {
-      "config": ".cz-configrc.js"
+      "path": "node_modules/cz-customizable"
     }
-  },
-  "gitHooks": {
-    "commit-msg": "commitlint -e $GIT_PARAMS"
   },
   "devDependencies": {
     "changelog-sn": "2.0.5"
