--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "antd": "^4.22.4",
     "changelog-sn": "^2.2.0",
     "commitizen": "4.2.4",
     "conventional-changelog-cli": "2.2.2",
@@ -20,6 +21,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
     "standard-version": "^9.5.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
