--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "conventional-changelog-cli": "2.2.2",
     "cz-customizable": "6.3.0",
     "husky": "7.0.1",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
